hphp/hack/test/typecheck/tconst/parent_test.php.like_types.exp
File "parent_test.php", line 26, characters 25-26:
Invalid argument (Typing[4110])
File "parent_test.php", line 8, characters 39-45:
Expected ~int because it is an unenforceable type
File "parent_test.php", line 26, characters 25-26:
But got string
